# ndlocr-lite-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  pdf_to_image_real_ocr.rs
benches/: deim_preprocess_bench.rs  line_segment_bench.rs  parseq_batch_preprocess_bench.rs  parseq_decode_bench.rs  parseq_preprocess_bench.rs
docs/: ci.md  eval_data_egov.md  evaluation.md  evaluation_report.md  examples.md  model_build.md  morph_correction.md  perf_batch_parseq_preprocess.md  perf_batch_recognize_page.md  perf_cached_recognize_page.md  perf_deim_preprocess_fast_path.md  perf_fast_line_segment_fallback.md  perf_line_segment_fast_path.md  perf_parseq_batch_preprocess_policy.md  perf_parseq_preprocess_direct.md  perf_parseq_sampling.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  plan.md  post_dict.example.yaml  rule_pack.example.yaml  rule_pack.scaned0.yaml
examples/: bench_ellisii_like.rs  bench_page_recognizer.rs  pdf_to_image_mock_page.rs
models/: README.md
src/: app.rs  cascade.rs  cli.rs  io.rs  lib.rs  main.rs
tests/: app_e2e_tests.rs  app_layout_tests.rs  artifacts_output_tests.rs  cascade_tests.rs  charset_tests.rs  cli_tests.rs  crop_tests.rs  docx_output_tests.rs  eval_fixture_tests.rs  infer_tests.rs  integration_scanned0_tests.rs  io_tests.rs  json_output_tests.rs  line_segment_tests.rs  morph_correction_tests.rs  output_regression_tests.rs  page_pool_tests.rs  pipeline_connect_tests.rs  post_dict_tests.rs  postprocess_tests.rs  preprocess_tests.rs  reading_order_tests.rs  run_page_tests.rs  smoke_io_tests.rs  text_output_tests.rs  (+1 more)
(+48 files in other folders)
