[package]
name = "ndlocr-lite-rs"
version = "0.1.0"
edition = "2024"
license = "CC-BY-4.0"
repository = "https://github.com/bokuweb/ndlocr-lite-rs"

[features]
default = []
# ONNX Runtime 推論を有効化。`ort` 2.x (download-binaries で自前バイナリ取得) を使う。
onnx = ["dep:ort", "dep:ndarray"]
# CoreML EP (現状未サポート: parseq の dynamic batch / DEIM の op の都合で
# `Failed to build the model execution plan` か MatMul shape mismatch で
# ロード or 推論失敗するため、有効化しても動かない。フォローアップ用の placeholder。
# 詳細は src/infer/ort_init.rs のコメント参照)。
coreml = ["onnx", "ort/coreml"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25.9"
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = [
    "std",
    "ndarray",
    "download-binaries",
    "copy-dylibs",
    "tls-native",
    "api-24",
] }
ndarray = { version = "0.17", optional = true }
once_cell = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
zip = "2"

[dev-dependencies]
criterion = "0.5"
proptest = "1"
tempfile = "3"

[[bench]]
name = "line_segment_bench"
harness = false

[[bench]]
name = "parseq_decode_bench"
harness = false

[[bench]]
name = "parseq_preprocess_bench"
harness = false

[[bench]]
name = "parseq_batch_preprocess_bench"
harness = false

[[bench]]
name = "deim_preprocess_bench"
harness = false
